Projet GL/test/src/test/deca/context/valid/increment2/int-equals-minus-int.deca
//Resulats : -4

//Historique : cree le 09/01/2023

{
    int a,b;

    a = 4;
    b = -a;

    println(b);
}