Projet GL/test/src/test/deca/context/invalid/increment2/bool-equals-minus-int.deca
//Rule 3.37
//Raison : type_unary_op(minus, int) = int

//Resultats : Ligne 14 erreur de typage

//Historique : cree le 09/01/2023


{
    int a = 2;
    boolean b;

    //Must be refused
    b = -a;
}